fix align after merge

--- a/src/client/Header/Header.scss
+++ b/src/client/Header/Header.scss
@@ -1,6 +1,5 @@
 .header {
   display: flex;
-  box-sizing: border-box;
   padding-left: 35px;
   padding-right: 35px;
 }
@@ -22,7 +21,7 @@
 
 .header__button {
   width: 270px;
-  height: 20px;
+  height: 55px;
   padding-bottom: 15px;
   padding-top: 20px;
   text-align: center;
